--- a/terraform/k8s/default-config/mojaloop-stateful-resources-ccdriven-aws-databases.yaml
+++ b/terraform/k8s/default-config/mojaloop-stateful-resources-ccdriven-aws-databases.yaml
@@ -1,6 +1,8 @@
 common_platform_db:
   app_owner: "platform"
   external_resource_config:
+    allow_major_version_upgrade: false
+    apply_immediately: false
     password_key_name: common_platform_db_password
     instance_address_key_name: common_platform_db_instance_address
     allocated_storage: 100
@@ -13,6 +15,7 @@ common_platform_db:
     engine: aurora-mysql
     engine_version: 8.0.mysql_aurora.3.04.0
     family: aurora-mysql8.0
+    final_snapshot_identifier: common_platform_db_final_snapshot
     instance_class: db.t3.medium
     replicas: 1
     maintenance_window: Sun:04:00-Sun:06:00
@@ -62,6 +65,8 @@ common_platform_db:
 common_mojaloop_db:
   app_owner: "mojaloop"
   external_resource_config:
+    allow_major_version_upgrade: false
+    apply_immediately: false
     password_key_name: common_mojaloop_db_password
     instance_address_key_name: common_mojaloop_db_instance_address
     allocated_storage: 100
@@ -74,6 +79,7 @@ common_mojaloop_db:
     engine: aurora-mysql
     engine_version: 8.0.mysql_aurora.3.04.0
     family: aurora-mysql8.0
+    final_snapshot_identifier: common_mojaloop_db_final_snapshot
     instance_class: db.t3.medium
     replicas: 1
     maintenance_window: Sun:04:00-Sun:06:00
@@ -129,18 +135,21 @@ common_document_db:
     instance_address_key_name: common_document_db_instance_address
     instance_class: db.t3.medium
     maintenance_window: Sun:04:00-Sun:06:00
+    major_engine_version: "5.0"
+    monitorin_interval: "30"
     multi_az: false
+    options: []
     parameters:
       - apply_method: pending-reboot
         name: tls
         value: disabled
-
     password_key_name: common_document_db_password
     port: "27017"
     replicas: 1
     skip_final_snapshot: true
     storage_encrypted: true
     storage_type: standard
+    storage_iops: 5000
     tags:
       Origin: Terraform
       mojaloop/cost_center: mlf-iac-sandbox
