--- a/gitops/applications/overlays/mongodb_provider/documentdb/docdbcluster.yaml
+++ b/gitops/applications/overlays/mongodb_provider/documentdb/docdbcluster.yaml
@@ -22,9 +22,10 @@ spec:
       engineVersion: "${ARGOCD_ENV_engine_version}"
       family: ${ARGOCD_ENV_family}
       instanceCount: ${ARGOCD_ENV_instance_count}
-      parameter:
-      - name: "audit_logs"
-        value: "disabled"
+      parameters:
+        - apply_method: pending-reboot
+          name: tls
+          value: disabled
       passwordSecret:
         key: "password"
         name: ${ARGOCD_ENV_db_secret}
