--- a/terraform/k8s/default-config/mojaloop-stateful-resources-ccdriven-aws-databases.yaml
+++ b/terraform/k8s/default-config/mojaloop-stateful-resources-ccdriven-aws-databases.yaml
@@ -1,4 +1,4 @@
-common_platform_db:
+common-platform-db:
   app_owner: "platform"
   external_resource_config:
     allow_major_version_upgrade: false
@@ -62,7 +62,7 @@ common_platform_db:
     logical_service_port: 3306
     vault_master_user_password_secret_key: common_platform_db_password
     vault_instance_address_key: common_platform_db_instance_address
-common_mojaloop_db:
+common-mojaloop-db:
   app_owner: "mojaloop"
   external_resource_config:
     allow_major_version_upgrade: false
@@ -118,7 +118,7 @@ common_mojaloop_db:
     logical_service_port: 3306
     vault_master_user_password_secret_key: common_mojaloop_db_password
     vault_instance_address_key: common_mojaloop_db_instance_address
-common_document_db:
+common-mongodb:
   app_owner: "mojaloop"
   external_resource_config:
     allocated_storage: 100
