--- a/gitops/applications/overlays/mongodb_provider/documentdb/docdbcluster.yaml
+++ b/gitops/applications/overlays/mongodb_provider/documentdb/docdbcluster.yaml
@@ -23,7 +23,7 @@ spec:
       family: ${ARGOCD_ENV_family}
       instanceCount: ${ARGOCD_ENV_instance_count}
       parameters:
-        - apply_method: pending-reboot
+        - applyMethod: pending-reboot
           name: tls
           value: disabled
       passwordSecret:
