--- a/terraform/k8s/default-config/mojaloop-stateful-resources-ccdriven-aws-databases.yaml
+++ b/terraform/k8s/default-config/mojaloop-stateful-resources-ccdriven-aws-databases.yaml
@@ -126,7 +126,7 @@ common-mongodb:
     apply_immediately: false
     backup_retention_period: 1
     backup_window: 01:00-04:00
-    db_name: common_document_db
+    db_name: common_database
     delete_protection: false
     engine: docdb
     engine_version: "5.0"
@@ -155,7 +155,7 @@ common-mongodb:
       mojaloop/cost_center: mlf-iac-sandbox
       mojaloop/env: ft-sbox-rw
       mojaloop/owner: Samuel-Kummary
-    username: mojaloop
+    username: common-mongodb-admin
     master_user_password_secret_namespace: stateful-resources
     master_user_password_secret: common-mongodb-secret
     master_user_password_secret_key: password
