--- a/gitops/argo-apps/base/gitlab-pre.yaml
+++ b/gitops/argo-apps/base/gitlab-pre.yaml
@@ -207,6 +207,9 @@ spec:
           - name: "object_storage_regional_endpoint"
             value: "${ARGOCD_ENV_utils_storage_object_storage_regional_endpoint}"
 
+          - name: "object_storage_path_style"
+            value: "${ARGOCD_ENV_utils_storage_object_storage_path_style}"
+
           - name: "sc_provider_config_name"
             value: "${ARGOCD_ENV_utils_capi_capi_crossplane_providerconfig_name}"
     #main gitlab db
