--- a/gitops/applications/base/crossplane-providers/crossplane-providers.yaml
+++ b/gitops/applications/base/crossplane-providers/crossplane-providers.yaml
@@ -132,7 +132,6 @@ metadata:
 spec:
   package: xpkg.upbound.io/crossplane-contrib/provider-aws:v${ARGOCD_ENV_crossplane_providers_aws_version}
 ---
-
 apiVersion: pkg.crossplane.io/v1
 kind: Provider
 metadata:
@@ -165,3 +164,5 @@ metadata:
   name: netbird-crossplane-provider
 spec:
   package: ghcr.io/infitx-org/netbird-crossplane-provider:v${ARGOCD_ENV_crossplane_providers_netbird_version}
+  controllerConfigRef:
+    name: debug-config
