--- a/terraform/ccnew/default-config/common-vars.yaml
+++ b/terraform/ccnew/default-config/common-vars.yaml
@@ -7,9 +7,9 @@ zitadel_tf_provider_version: "99.99.99"
 netbird_tf_provider_version: "99.99.99"
 grafana_tf_provider_version: 3.6.0
 argocd_helm_version: "7.6.12"
-reflector_helm_version: "7.1.262"
-reloader_helm_version: "1.0.67"
-crossplane_helm_version: "1.16.0"
+reflector_helm_version: "9.0.322"
+reloader_helm_version: "1.4.0"
+crossplane_helm_version: "1.19.0"
 zitadel_helm_version: "8.5.0"
 netbird_helm_version: "1.5.6"
 netbird_image_version: "0.31.1"
@@ -39,13 +39,13 @@ netbird_db_preferred_backup_window: "07:00-09:00"
 
 stunner_gateway_operator_helm_version: "0.19.0"
 nexus_helm_version: "4.44.0"
-cert_manager_helm_version: 1.15.0
-consul_helm_version: 1.4.0
+cert_manager_helm_version: "1.17.1"
+consul_helm_version: "1.4.0"
 external_dns_helm_version: "7.5.5"
 vault_helm_version: "0.28.1"
-vault_config_operator_helm_version: 0.8.28
+vault_config_operator_helm_version: "0.8.28"
 istio_helm_version: "1.22.1"
-external_secrets_helm_version: "0.9.20"
+external_secrets_helm_version: "0.15.1"
 crossplane_providers_vault_version: "1.0.0"
 crossplane_providers_terraform_version: "0.16.0"
 crossplane_providers_ansible_version: "0.6.0"
@@ -64,7 +64,7 @@ crossplane_packages_sc_postgres_version: "v0.1.0-pr16-14261304175"
 velero_helm_version: "8.3.0"
 velero_plugin_version: "v1.11.1"
 coredns_localcache_version: "1.11.3"
-kyverno_helm_version: "3.3.4"
+kyverno_helm_version: "3.3.7"
 
 istio_egress_gateway_max_replicas: 5
 istio_proxy_log_level: warn
