--- a/terraform/ccnew/default-config/common-vars.yaml
+++ b/terraform/ccnew/default-config/common-vars.yaml
@@ -8,7 +8,7 @@ netbird_tf_provider_version: "99.99.99"
 grafana_tf_provider_version: 3.6.0
 argocd_helm_version: "7.6.12"
 reflector_helm_version: "9.0.322"
-reloader_helm_version: "v1.4.0"
+reloader_helm_version: "1.0.67"
 crossplane_helm_version: "1.19.0"
 zitadel_helm_version: "8.5.0"
 netbird_helm_version: "1.5.6"
