--- a/terraform/k8s/default-config/mojaloop-stateful-resources-ccdriven-aws-databases.yaml
+++ b/terraform/k8s/default-config/mojaloop-stateful-resources-ccdriven-aws-databases.yaml
@@ -155,7 +155,7 @@ common_mongodb:
       mojaloop/cost_center: mlf-iac-sandbox
       mojaloop/env: ft-sbox-rw
       mojaloop/owner: Samuel-Kummary
-    username: commonmongodbadmin
+    username: commonmongodbuser
     master_user_password_secret_namespace: stateful-resources
     master_user_password_secret: common-mongodb-secret
     master_user_password_secret_key: password
