--- a/gitops/applications/base/crossplane-packages/crossplane-packages.yaml
+++ b/gitops/applications/base/crossplane-packages/crossplane-packages.yaml
@@ -22,3 +22,17 @@ metadata:
 spec:
   package: ghcr.io/mojaloop/iac-crossplane-packages/objectstores:${ARGOCD_ENV_crossplane_packages_objectstores_version}
   skipDependencyResolution: true
+---
+apiVersion: pkg.crossplane.io/v1
+kind: Configuration
+metadata:
+  name: netbird-operator-install
+spec:
+  package: ghcr.io/mojaloop/iac-crossplane-packages/sc-nboperatorinstall:${ARGOCD_ENV_crossplane_packages_sc_nboperatorinstall_version}
+---
+apiVersion: pkg.crossplane.io/v1
+kind: Configuration
+metadata:
+  name: nb-config
+spec:
+  package: ghcr.io/mojaloop/iac-crossplane-packages/nb-config:${ARGOCD_ENV_crossplane_packages_nb_config_version}
