--- a/terraform/ccnew/default-config/common-vars.yaml
+++ b/terraform/ccnew/default-config/common-vars.yaml
@@ -61,6 +61,8 @@ crossplane_functions_auto_ready_version: "0.4.2"
 crossplane_packages_objectstores_version: "v17-14259904996-1"
 crossplane_packages_utils_version: "v0.2.0-pr30-14318917212"
 crossplane_packages_sc_postgres_version: "v0.1.0-pr16-14261304175"
+crossplane_packages_sc_nboperatorinstall_version: "v0.1.0-pr37-14360885310"
+crossplane_packages_nb_config_version: "v0.1.0-pr38-14361249221"
 velero_helm_version: "8.3.0"
 velero_plugin_version: "v1.11.1"
 coredns_localcache_version: "1.11.3"
