add includeCRDs: true

--- a/gitops/applications/base/netbird-operator/kustomization.yaml
+++ b/gitops/applications/base/netbird-operator/kustomization.yaml
@@ -8,3 +8,4 @@ helmCharts:
     repo: https://netbirdio.github.io/kubernetes-operator
     valuesFile: netbird-operator-values.yaml
     namespace: ${ARGOCD_ENV_netbird_operator_namespace}
+    includeCRDs: true
