--- a/gitops/applications/base/netbird-operator/kustomization.yaml
+++ b/gitops/applications/base/netbird-operator/kustomization.yaml
@@ -1,6 +1,7 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
-
+resources:
+  - namespace.yaml
 helmCharts:
   - name: kubernetes-operator
     releaseName: ${ARGOCD_ENV_netbird_operator_app_name}
