--- a/terraform/k8s/default-config/proxy-pm4ml-vars.yaml
+++ b/terraform/k8s/default-config/proxy-pm4ml-vars.yaml
@@ -2,7 +2,7 @@ pm4ml_enabled: true
 opentelemetry_enabled: false
 opentelemetry_namespace_filtering_enable: false
 proxy_pm4ml_chart_version: 1.1.0
-pm4ml_ingress_internal_lb: false
+pm4ml_ingress_internal_lb: true
 pm4ml_scheme_a_config:
   domain: ${env}.${domain}
   pm4ml_external_switch_client_secret_vault_path: mcm_client_secret_a
