--- a/gitops/applications/base/monitoring/values-mimir.yaml
+++ b/gitops/applications/base/monitoring/values-mimir.yaml
@@ -19,12 +19,12 @@ mimir:
       storage:
         backend: s3
         s3:
-          access_key_id: $${AWS_ACCESS_KEY_ID}
-          secret_access_key: $${AWS_SECRET_ACCESS_KEY}
-          bucket_name: $${BUCKET_NAME}
-          endpoint: $${BUCKET_HOST}
-          insecure: true
-          bucket_lookup_type: path
+          access_key_id: $${username}
+          secret_access_key: $${password}
+          bucket_name: "mimir-${ARGOCD_ENV_cluster_name}"
+          endpoint: ${ARGOCD_ENV_object_storage_host}
+          insecure: ${ARGOCD_ENV_object_store_insecure_connection}
+          bucket_lookup_type: ${ARGOCD_ENV_bucket_lookup_type}
     alertmanager_storage:
       storage_prefix: alertmanager
     ruler_storage:
@@ -125,7 +125,7 @@ alertmanager:
     limits:
       cpu: ${ARGOCD_ENV_mimir_alertmanager_limits_cpu}
       memory: ${ARGOCD_ENV_mimir_alertmanager_limits_memory}
-  extraEnvVarsCM: ${ARGOCD_ENV_mimir_bucket_name}
-  extraEnvVarsSecret: ${ARGOCD_ENV_mimir_bucket_name}
+  # extraEnvVarsCM: ${ARGOCD_ENV_mimir_bucket_name}
+  extraEnvVarsSecret: "mimir-${ARGOCD_ENV_cluster_name}"
   persistence:
     size: ${ARGOCD_ENV_mimir_alertmanager_storage_size}
