--- a/gitops/argo-apps/base/monitoring-pre.yaml
+++ b/gitops/argo-apps/base/monitoring-pre.yaml
@@ -37,6 +37,9 @@ spec:
     plugin:
       name: envsubst
       env:
+        - name: "cluster_name"
+          value: "${ARGOCD_ENV_cluster_name}"
+
         - name: "mimir_bucket_max_objects"
           value: "${ARGOCD_ENV_monitoring_pre_mimir_bucket_max_objects}"
         - name: "mimir_bucket_storage_size"
