Loki and mimir fixes

--- a/gitops/applications/base/monitoring/values-mimir.yaml
+++ b/gitops/applications/base/monitoring/values-mimir.yaml
@@ -65,8 +65,8 @@ ingester:
     limits:
       cpu: ${ARGOCD_ENV_mimir_ingester_limits_cpu}
       memory: ${ARGOCD_ENV_mimir_ingester_limits_memory}
-  extraEnvVarsCM: ${ARGOCD_ENV_mimir_bucket_name}
-  extraEnvVarsSecret: ${ARGOCD_ENV_mimir_bucket_name}
+  # extraEnvVarsCM: "mimir-${ARGOCD_ENV_cluster_name}"
+  extraEnvVarsSecret: "mimir-${ARGOCD_ENV_cluster_name}"
   persistence:
     size: ${ARGOCD_ENV_mimir_ingester_storage_size}
 
@@ -76,8 +76,8 @@ querier:
     limits:
       cpu: ${ARGOCD_ENV_mimir_querier_limits_cpu}
       memory: ${ARGOCD_ENV_mimir_querier_limits_memory}
-  extraEnvVarsCM: ${ARGOCD_ENV_mimir_bucket_name}
-  extraEnvVarsSecret: ${ARGOCD_ENV_mimir_bucket_name}
+  # extraEnvVarsCM: "mimir-${ARGOCD_ENV_cluster_name}"
+  extraEnvVarsSecret: "mimir-${ARGOCD_ENV_cluster_name}"
 
 queryFrontend:
   replicaCount: ${ARGOCD_ENV_mimir_query_frontend_replica_count}
@@ -88,8 +88,8 @@ queryFrontend:
 
 compactor:
   replicaCount: ${ARGOCD_ENV_mimir_compactor_replica_count}
-  extraEnvVarsCM: ${ARGOCD_ENV_mimir_bucket_name}
-  extraEnvVarsSecret: ${ARGOCD_ENV_mimir_bucket_name}
+  # extraEnvVarsCM: "mimir-${ARGOCD_ENV_cluster_name}"
+  extraEnvVarsSecret: "mimir-${ARGOCD_ENV_cluster_name}"
   resources:
     limits:
       cpu: ${ARGOCD_ENV_mimir_compactor_limits_cpu}
@@ -103,8 +103,8 @@ storeGateway:
     limits:
       cpu: ${ARGOCD_ENV_mimir_store_gateway_limits_cpu}
       memory: ${ARGOCD_ENV_mimir_store_gateway_limits_memory}
-  extraEnvVarsCM: ${ARGOCD_ENV_mimir_bucket_name}
-  extraEnvVarsSecret: ${ARGOCD_ENV_mimir_bucket_name}
+  # extraEnvVarsCM: "mimir-${ARGOCD_ENV_cluster_name}"
+  extraEnvVarsSecret: "mimir-${ARGOCD_ENV_cluster_name}"
   persistence:
     size: ${ARGOCD_ENV_mimir_store_gateway_storage_size}
 
@@ -115,8 +115,8 @@ ruler:
     limits:
       cpu: ${ARGOCD_ENV_mimir_ruler_limits_cpu}
       memory: ${ARGOCD_ENV_mimir_ruler_limits_memory}
-  extraEnvVarsCM: ${ARGOCD_ENV_mimir_bucket_name}
-  extraEnvVarsSecret: ${ARGOCD_ENV_mimir_bucket_name}
+  # extraEnvVarsCM: "mimir-${ARGOCD_ENV_cluster_name}"
+  extraEnvVarsSecret: "mimir-${ARGOCD_ENV_cluster_name}"
 
 alertmanager:
   enabled: true
@@ -125,7 +125,7 @@ alertmanager:
     limits:
       cpu: ${ARGOCD_ENV_mimir_alertmanager_limits_cpu}
       memory: ${ARGOCD_ENV_mimir_alertmanager_limits_memory}
-  # extraEnvVarsCM: ${ARGOCD_ENV_mimir_bucket_name}
+  # extraEnvVarsCM: "mimir-${ARGOCD_ENV_cluster_name}"
   extraEnvVarsSecret: "mimir-${ARGOCD_ENV_cluster_name}"
   persistence:
     size: ${ARGOCD_ENV_mimir_alertmanager_storage_size}
