--- a/gitops/applications/base/monitoring/values-loki.yaml
+++ b/gitops/applications/base/monitoring/values-loki.yaml
@@ -5,7 +5,7 @@ loki:
       retention_enabled: true # enable deletion using compactor
       shared_store: s3
     limits_config:
-      retention_period: ${ARGOCD_ENV_ctrl_cntr_loki_retention_period}
+      retention_period: ${ARGOCD_ENV_loki_retention_period}
     ingester:
       max_chunk_age: ${ARGOCD_ENV_loki_ingester_max_chunk_age}
       lifecycler:
@@ -63,8 +63,8 @@ ingester:
       cpu: ${ARGOCD_ENV_loki_ingester_limits_cpu}
       memory: ${ARGOCD_ENV_loki_ingester_limits_memory}
   extraArgs: ["-config.expand-env"]
-  extraEnvVarsCM: ${ARGOCD_ENV_ctrl_cntr_loki_bucket_name}
-  extraEnvVarsSecret: ${ARGOCD_ENV_ctrl_cntr_loki_bucket_name}
+  # extraEnvVarsCM: "loki-${ARGOCD_ENV_cluster_name}"
+  extraEnvVarsSecret: "loki-${ARGOCD_ENV_cluster_name}"
 compactor:
   replicaCount: ${ARGOCD_ENV_loki_compactor_replica_count}
   resources:
@@ -72,8 +72,8 @@ compactor:
       cpu: ${ARGOCD_ENV_loki_compactor_limits_cpu}
       memory: ${ARGOCD_ENV_loki_compactor_limits_memory}
   extraArgs: ["-config.expand-env"]
-  extraEnvVarsCM: ${ARGOCD_ENV_ctrl_cntr_loki_bucket_name}
-  extraEnvVarsSecret: ${ARGOCD_ENV_ctrl_cntr_loki_bucket_name}
+  # extraEnvVarsCM: "loki-${ARGOCD_ENV_cluster_name}"
+  extraEnvVarsSecret: "loki-${ARGOCD_ENV_cluster_name}"
   updateStrategy:
     type: Recreate
 distributor:
@@ -86,8 +86,8 @@ distributor:
       cpu: ${ARGOCD_ENV_loki_distributor_limits_cpu}
       memory: ${ARGOCD_ENV_loki_distributor_limits_memory}
   extraArgs: ["-config.expand-env"]
-  extraEnvVarsCM: ${ARGOCD_ENV_ctrl_cntr_loki_bucket_name}
-  extraEnvVarsSecret: ${ARGOCD_ENV_ctrl_cntr_loki_bucket_name}
+  # extraEnvVarsCM: "loki-${ARGOCD_ENV_cluster_name}"
+  extraEnvVarsSecret: "loki-${ARGOCD_ENV_cluster_name}"
 querier:
   replicaCount: ${ARGOCD_ENV_loki_querier_replica_count}
   resources:
@@ -95,8 +95,8 @@ querier:
       cpu: ${ARGOCD_ENV_loki_querier_limits_cpu}
       memory: ${ARGOCD_ENV_loki_querier_limits_memory}
   extraArgs: ["-config.expand-env"]
-  extraEnvVarsCM: ${ARGOCD_ENV_ctrl_cntr_loki_bucket_name}
-  extraEnvVarsSecret: ${ARGOCD_ENV_ctrl_cntr_loki_bucket_name}
+  # extraEnvVarsCM: "loki-${ARGOCD_ENV_cluster_name}"
+  extraEnvVarsSecret: "loki-${ARGOCD_ENV_cluster_name}"
 queryFrontend:
   replicaCount: ${ARGOCD_ENV_loki_query_frontend_replica_count}
   resources:
@@ -104,8 +104,8 @@ queryFrontend:
       cpu: ${ARGOCD_ENV_loki_query_frontend_limits_cpu}
       memory: ${ARGOCD_ENV_loki_query_frontend_limits_memory}
   extraArgs: ["-config.expand-env"]
-  extraEnvVarsCM: ${ARGOCD_ENV_ctrl_cntr_loki_bucket_name}
-  extraEnvVarsSecret: ${ARGOCD_ENV_ctrl_cntr_loki_bucket_name}
+  # extraEnvVarsCM: "loki-${ARGOCD_ENV_cluster_name}"
+  extraEnvVarsSecret: "loki-${ARGOCD_ENV_cluster_name}"
 queryScheduler:
   replicaCount: ${ARGOCD_ENV_loki_query_scheduler_replica_count}
   resources:
@@ -114,7 +114,7 @@ queryScheduler:
       memory: ${ARGOCD_ENV_loki_query_scheduler_limits_memory}
   enabled: true
   extraArgs: ["-config.expand-env"]
-  # extraEnvVarsCM: ${ARGOCD_ENV_ctrl_cntr_loki_bucket_name}
+  # extraEnvVarsCM: "loki-${ARGOCD_ENV_cluster_name}"
   extraEnvVarsSecret: "loki-${ARGOCD_ENV_cluster_name}"
 
 
