--- a/gitops/argo-apps/base/monitoring-pre.yaml
+++ b/gitops/argo-apps/base/monitoring-pre.yaml
@@ -48,9 +48,9 @@ spec:
         - name: "mimir_bucket_name"
           value: "${ARGOCD_ENV_monitoring_pre_mimir_bucket_name}"
 
-        - name: "ctrl_cntr_loki_bucket_max_objects"
-          value: "${ARGOCD_ENV_monitoring_pre_ctrl_cntr_loki_bucket_max_objects}"
-        - name: "ctrl_cntr_loki_bucket_storage_size"
-          value: "${ARGOCD_ENV_monitoring_pre_ctrl_cntr_loki_bucket_storage_size}"
-        - name: "ctrl_cntr_loki_bucket_name"
-          value: "${ARGOCD_ENV_monitoring_pre_ctrl_cntr_loki_bucket_name}"
+        - name: "loki_bucket_max_objects"
+          value: "${ARGOCD_ENV_monitoring_pre_loki_bucket_max_objects}"
+        - name: "loki_bucket_storage_size"
+          value: "${ARGOCD_ENV_monitoring_pre_loki_bucket_storage_size}"
+        - name: "loki_bucket_name"
+          value: "${ARGOCD_ENV_monitoring_pre_loki_bucket_name}"
