--- a/gitops/argo-apps/base/monitoring.yaml
+++ b/gitops/argo-apps/base/monitoring.yaml
@@ -117,12 +117,12 @@ spec:
         - name: "mimir_compactor_deletion_delay"
           value: "${ARGOCD_ENV_monitoring_mimir_compactor_deletion_delay}"
 
-        - name: "ctrl_cntr_loki_bucket_name"
-          value: "${ARGOCD_ENV_monitoring_pre_ctrl_cntr_loki_bucket_name}"
-        - name: "ctrl_cntr_loki_helm_version"
-          value: "${ARGOCD_ENV_monitoring_monitoring_ctrl_cntr_loki_helm_version}"
-        - name: "ctrl_cntr_loki_retention_period"
-          value: "${ARGOCD_ENV_monitoring_monitoring_ctrl_cntr_loki_retention_period}"
+        - name: "loki_bucket_name"
+          value: "${ARGOCD_ENV_monitoring_pre_loki_bucket_name}"
+        - name: "loki_helm_version"
+          value: "${ARGOCD_ENV_monitoring_monitoring_loki_helm_version}"
+        - name: "loki_retention_period"
+          value: "${ARGOCD_ENV_monitoring_monitoring_loki_retention_period}"
         - name: "loki_ingester_max_chunk_age"
           value: "${ARGOCD_ENV_monitoring_loki_ingester_max_chunk_age}"
         - name: "loki_ingester_replication_factor"
