--- a/gitops/applications/overlays/cloud_provider/private-cloud/storage-provider/capi-post-config/kustomization.yaml
+++ b/gitops/applications/overlays/cloud_provider/private-cloud/storage-provider/capi-post-config/kustomization.yaml
@@ -2,3 +2,5 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
   - sc-kube-providerconfig.yaml
+  - sc-helm-providerconfig.yaml
+  - sc-bootstrap.yaml
