--- a/gitops/applications/overlays/cloud_provider/private-cloud/storage-provider/capi-post-config/sc-helm-providerconfig.yaml
+++ b/gitops/applications/overlays/cloud_provider/private-cloud/storage-provider/capi-post-config/sc-helm-providerconfig.yaml
@@ -1,7 +1,8 @@
-apiVersion: kubernetes.crossplane.io/v1alpha1
+---
+apiVersion: helm.crossplane.io/v1beta1
 kind: ProviderConfig
 metadata:
-  name:  ${ARGOCD_ENV_sc_kubernetes_provider_name}
+  name:  ${ARGOCD_ENV_sc_helm_provider_name}
 spec:
   credentials:
     source: Secret
