--- a/gitops/argo-apps/base/capi-post-config.yaml
+++ b/gitops/argo-apps/base/capi-post-config.yaml
@@ -40,4 +40,7 @@ spec:
           value: "${ARGOCD_ENV_utils_capi_capi_cluster_name}"
 
         - name: "sc_kubernetes_provider_name"
-          value: "${ARGOCD_ENV_utils_capi_capi_crossplane_providerconfig_name}"
+          value: "${ARGOCD_ENV_utils_capi_capi_crossplane_k8s_providerconfig_name}"
+
+        - name: "sc_helm_provider_name"
+          value: "${ARGOCD_ENV_utils_capi_capi_crossplane_helm_providerconfig_name}"
