--- a/terraform/ccnew/default-config/common-vars.yaml
+++ b/terraform/ccnew/default-config/common-vars.yaml
@@ -50,6 +50,7 @@ crossplane_providers_vault_version: "1.0.0"
 crossplane_providers_terraform_version: "0.16.0"
 crossplane_providers_ansible_version: "0.6.0"
 crossplane_providers_k8s_version: "0.11.4"
+crossplane_providers_helm_version: "0.20.4"
 crossplane_providers_netbird_version: "0.0.10"
 crossplane_providers_aws_version: "0.49.2"
 crossplane_providers_aws_s3_version: "1.21.0"
@@ -61,6 +62,7 @@ crossplane_functions_auto_ready_version: "0.4.2"
 crossplane_packages_objectstores_version: "v17-14259904996-1"
 crossplane_packages_utils_version: "v0.2.0-pr30-14318917212"
 crossplane_packages_sc_postgres_version: "v0.1.0-pr16-14261304175"
+crossplane_packages_sc_bootstrap_version: "v0.1.0-pr41-14388264354"
 crossplane_packages_sc_nboperatorinstall_version: "v0.1.0-pr37-14360885310"
 crossplane_packages_nb_config_version: "v0.1.0-pr38-14361249221"
 velero_helm_version: "8.3.0"
