fix: claim name

--- a/gitops/applications/overlays/cloud_provider/private-cloud/storage-provider/capi-post-config/sc-bootstrap.yaml
+++ b/gitops/applications/overlays/cloud_provider/private-cloud/storage-provider/capi-post-config/sc-bootstrap.yaml
@@ -1,7 +1,7 @@
 apiVersion: sc.mojaloop.io/v1alpha1
 kind: SCBootstrap
 metadata:
-  name: sa-bootstrap
+  name: sc-bootstrap
   namespace: ${ARGOCD_ENV_capi_cluster_namespace}
 spec:
   parameters:
