rm kubeapi for now

--- a/gitops/applications/base/netbird-operator/netbird-operator-values.yaml
+++ b/gitops/applications/base/netbird-operator/netbird-operator-values.yaml
@@ -1,10 +1,12 @@
+cluster:
+  name: ${ARGOCD_ENV_netbird_operator_cluster_name}
 ingress:
   enabled: true
   router:
     enabled: true
-  kubernetesAPI:
-    enabled: true
-    groups: ["${ARGOCD_ENV_netbird_operator_kubeapi_group}"]
+  # kubernetesAPI:
+  #   enabled: true
+  #   groups: ["${ARGOCD_ENV_netbird_operator_kubeapi_group}"]
 netbirdAPI:
   keyFromSecret: ${ARGOCD_ENV_netbird_operator_api_key_secret}
 managementURL: ${ARGOCD_ENV_netbird_operator_management_url}
