--- a/gitops/applications/base/netbird-operator/netbird-operator-values.yaml
+++ b/gitops/applications/base/netbird-operator/netbird-operator-values.yaml
@@ -4,8 +4,8 @@ ingress:
   enabled: true
   router:
     enabled: true
-  # kubernetesAPI:
-  #   enabled: true
+  kubernetesAPI:
+    enabled: true
   #   groups: ["${ARGOCD_ENV_netbird_operator_kubeapi_group}"]
 netbirdAPI:
   keyFromSecret: ${ARGOCD_ENV_netbird_operator_api_key_secret}
