--- a/gitops/applications/overlays/cloud_provider/private-cloud/storage-provider/capi-post-config/sc-bootstrap.yaml
+++ b/gitops/applications/overlays/cloud_provider/private-cloud/storage-provider/capi-post-config/sc-bootstrap.yaml
@@ -10,52 +10,52 @@ spec:
         source:
           targetRevision: feat/sc-bootstrap
           envVars:
+          - name: "cluster_name"
+            value: "${ARGOCD_ENV_cluster_name}"
+
           # rook-ceph
-          - name: storage_namespace
-            value: rook-ceph
-          - name: ext_storage_namespace
-            value: storage
-          - name: rook_ceph_image_version
-            value: v19.2.1
-          - name: control_center_cluster_name
-            value: ccinfra
-          - name: rook_ceph_version
-            value: 1.16.5
-          - name: rook_ceph_pool_replication_size
-            value: "2"
-          - name: storage_rgw_external_ip
-            value: 10.10.127.10
-          # netbird-operator
-          - name: netbird_operator_api_key_secret
-            value: nb-operator-api-key
-          - name: netbird_operator_management_url
-            value: https://netbird.ccinfra.drpp-onprem.global:443
-          - name: netbird_operator_namespace
-            value: netbird
-          - name: netbird_operator_helm_version
-            value: 0.1.7
-          - name: netbird_operator_app_name
-            value: nb-op
-          - name: netbird_operator_cluster_name
-            value: storage-cluster
+          - name: "utils_capi_capi_rook_ceph_namespace"
+            value: "${ARGOCD_ENV_utils_capi_capi_rook_ceph_namespace}"
+
+          - name: "utils_storage_namespace"
+            value: "${ARGOCD_ENV_utils_storage_namespace}"
+
+          - name: "utils_capi_capi_rook_ceph_image_version"
+            value: "${ARGOCD_ENV_utils_capi_capi_rook_ceph_image_version}"
+
+          - name: "utils_capi_capi_rook_ceph_helm_version"
+            value: "${ARGOCD_ENV_utils_capi_capi_rook_ceph_helm_version}"
+
+          - name: "rook_ceph_pool_replication_size"
+            value: "${ARGOCD_ENV_utils_capi_capi_rook_ceph_rbd_pool_replication_size}"
+
+          - name: "utils_capi_capi_rook_ceph_rgw_external_ip"
+            value: "${ARGOCD_ENV_utils_capi_capi_rook_ceph_rgw_external_ip}"
+
           # metallb
-          - name: metallb_version
-            value: 0.14.9
-          - name: metallb_ip_range_end
-            value: 10.10.127.20
-          - name: metallb_ip_range_begin
-            value: 10.10.127.10
-          - name: metallb_namespace
-            value: metallb-system
+          - name: "sc_metallb_version"
+            value: "${ARGOCD_ENV_sc_metallb_version}"
+
+          - name: "sc_metallb_ip_range_end"
+            value: "${ARGOCD_ENV_sc_metallb_ip_range_end}"
+
+          - name: "sc_metallb_ip_range_begin"
+            value: "${ARGOCD_ENV_sc_metallb_ip_range_begin}"
+
+          - name: "sc_metallb_namespace"
+            value: "${ARGOCD_ENV_sc_metallb_namespace}"
           # base-monitoring
-          - name: monitoring_namespace
-            value: monitoring
-          - name: grafana_operator_version
-            value: 4.4.12
-          - name: prometheus_crd_version
-            value: 13.0.2
-          - name: grafana_crd_version_tag
-            value: 5.10.0
+          - name: "monitoring_pre_namespace"
+            value: "${ARGOCD_ENV_monitoring_pre_namespace}"
+
+          - name: "utils_base_monitoring_grafana_operator_version"
+            value: "${ARGOCD_ENV_utils_base_monitoring_grafana_operator_version}"
+
+          - name: "utils_base_monitoring_prometheus_crd_version"
+            value: "${ARGOCD_ENV_utils_base_monitoring_prometheus_crd_version}"
+
+          - name: "utils_base_monitoring_grafana_crd_version_tag"
+            value: "${ARGOCD_ENV_utils_base_monitoring_grafana_crd_version_tag}"
 
 
 
