--- a/gitops/argo-apps/base/capi-post-config.yaml
+++ b/gitops/argo-apps/base/capi-post-config.yaml
@@ -33,11 +33,26 @@ spec:
     plugin:
       name: envsubst
       env:
+        - name: "argocd_repo_url"
+          value: "${ARGOCD_ENV_argocd_repo_url}"
+
+        - name: "argocd_app_namespace"
+          value: "${ARGOCD_ENV_argocd_app_namespace}"
+
         - name: "capi_cluster_namespace"
           value: "${ARGOCD_ENV_utils_capi_capi_cluster_namespace}"
 
         - name: "capi_cluster_name"
           value: "${ARGOCD_ENV_utils_capi_capi_cluster_name}"
+
+        - name: "sc_app_namespace"
+          value: "{ARGOCD_ENV_sc_app_namespace}"
+
+        - name: "sc_application_gitrepo_tag"
+          value: "{ARGOCD_ENV_sc_application_gitrepo_tag}"
+
+        - name: "utils_application_gitrepo_tag"
+          value: "{ARGOCD_ENV_utils_application_gitrepo_tag}"
 
         - name: "sc_kubernetes_provider_name"
           value: "${ARGOCD_ENV_utils_capi_capi_crossplane_k8s_providerconfig_name}"
@@ -48,8 +63,21 @@ spec:
         - name: "utils_capi_capi_rook_ceph_namespace"
           value: "${ARGOCD_ENV_utils_capi_capi_rook_ceph_namespace}"
 
-        - name: "utils_storage_namespace"
-          value: "${ARGOCD_ENV_utils_storage_namespace}"
+        # rook
+        - name: "utils_capi_capi_rook_ceph_namespace"
+          value: "${ARGOCD_ENV_utils_capi_capi_rook_ceph_namespace}"
+
+        - name: "utils_capi_capi_rook_ceph_sync_wave"
+          value: "${ARGOCD_ENV_utils_capi_capi_rook_ceph_sync_wave}"
+
+        - name: "utils_capi_capi_rook_ceph_post_config_sync_wave"
+          value: "{ARGOCD_ENV_utils_capi_capi_rook_ceph_post_config_sync_wave}"
+
+        - name: "utils_capi_capi_rook_ceph_app_name"
+          value: "${ARGOCD_ENV_utils_capi_capi_rook_ceph_app_name}"
+
+        - name: "utils_capi_capi_rook_ceph_post_config_app_name"
+          value: "${ARGOCD_ENV_utils_capi_capi_rook_ceph_post_config_app_name}"
 
         - name: "utils_capi_capi_rook_ceph_image_version"
           value: "${ARGOCD_ENV_utils_capi_capi_rook_ceph_image_version}"
@@ -67,6 +95,15 @@ spec:
           value: "${ARGOCD_ENV_utils_capi_capi_rook_ceph_rgw_external_ip}"
 
         # metallb
+        - name: "sc_metallb_app_name"
+          value: "{ARGOCD_ENV_sc_metallb_app_name}"
+
+        - name: "sc_metallb_namespace"
+          value: "${ARGOCD_ENV_monitoring_pre_namespace}"
+
+        - name: "sc_metallb_sync_wave"
+          value: "{ARGOCD_ENV_monitoring_pre_sync_wave}"
+
         - name: "sc_metallb_version"
           value: "${ARGOCD_ENV_sc_metallb_version}"
 
@@ -80,8 +117,20 @@ spec:
           value: "${ARGOCD_ENV_sc_metallb_namespace}"
 
         # monitoring
+        - name: "monitoring_pre_app_name"
+          value: "{ARGOCD_ENV_monitoring_pre_app_name}"
+
+        - name: "monitoring_app_namespace"
+          value: "{ARGOCD_ENV_monitoring_app_namespace}"
+
         - name: "monitoring_pre_namespace"
           value: "${ARGOCD_ENV_monitoring_pre_namespace}"
+
+        - name: "monitoring_pre_sync_wave"
+          value: "{ARGOCD_ENV_monitoring_pre_sync_wave}"
+
+        - name: "monitoring_application_gitrepo_tag"
+          value: "{ARGOCD_ENV_monitoring_application_gitrepo_tag}"
 
         - name: "utils_base_monitoring_grafana_operator_version"
           value: "${ARGOCD_ENV_utils_base_monitoring_grafana_operator_version}"
