--- a/gitops/applications/overlays/cloud_provider/private-cloud/storage-provider/capi-post-config/sc-bootstrap.yaml
+++ b/gitops/applications/overlays/cloud_provider/private-cloud/storage-provider/capi-post-config/sc-bootstrap.yaml
@@ -13,6 +13,13 @@ spec:
           - name: "cluster_name"
             value: "${ARGOCD_ENV_cluster_name}"
 
+          - name: "argocd_repo_url"
+            value: "${ARGOCD_ENV_argocd_repo_url}"
+
+          - name: "argocd_app_namespace"
+            value: "${ARGOCD_ENV_argocd_app_namespace}"
+
+
           # rook-ceph
           - name: "utils_capi_capi_rook_ceph_namespace"
             value: "${ARGOCD_ENV_utils_capi_capi_rook_ceph_namespace}"
