--- a/gitops/applications/base/netbird/netbird-values.yaml
+++ b/gitops/applications/base/netbird/netbird-values.yaml
@@ -102,9 +102,7 @@ management:
       }
     }
   image:
-    repository: wiretrustee/management
-    tag: fix-user-role
-    #tag: ${ARGOCD_ENV_netbird_image_version}
+    tag: ${ARGOCD_ENV_netbird_image_version}
   ingress:
     enabled: false
   ingressGrpc:
