--- a/gitops/argo-apps/base/gitlab-pre.yaml
+++ b/gitops/argo-apps/base/gitlab-pre.yaml
@@ -207,8 +207,8 @@ spec:
           - name: "object_storage_regional_endpoint"
             value: "${ARGOCD_ENV_utils_storage_object_storage_regional_endpoint}"
 
-        #  - name: "object_storage_path_style"
-        #    value: "${ARGOCD_ENV_utils_storage_private_cloud_provider_object_storage_path_style}"
+          - name: "object_storage_path_style"
+            value: "${ARGOCD_ENV_utils_storage_object_storage_path_style}"
 
           - name: "sc_provider_config_name"
             value: "${ARGOCD_ENV_utils_capi_capi_crossplane_k8s_providerconfig_name}"
