--- a/gitops/applications/overlays/cloud_provider/private-cloud/storage-provider/capi-post-config/sc-bootstrap.yaml
+++ b/gitops/applications/overlays/cloud_provider/private-cloud/storage-provider/capi-post-config/sc-bootstrap.yaml
@@ -10,36 +10,74 @@ spec:
         source:
           targetRevision: feat/sc-bootstrap
           envVars:
-          - name: "cluster_name"
-            value: "${ARGOCD_ENV_cluster_name}"
-
           - name: "argocd_repo_url"
             value: "${ARGOCD_ENV_argocd_repo_url}"
 
-          - name: "argocd_app_namespace"
-            value: "${ARGOCD_ENV_argocd_app_namespace}"
+          - name: "utils_app_namespace"
+            value: "${ARGOCD_ENV_utils_app_namespace}"
 
+          - name: "capi_cluster_namespace"
+            value: "${ARGOCD_ENV_utils_capi_capi_cluster_namespace}"
 
-          # rook-ceph
+          - name: "capi_cluster_name"
+            value: "${ARGOCD_ENV_utils_capi_capi_cluster_name}"
+
+          - name: "sc_application_gitrepo_tag"
+            value: "${ARGOCD_ENV_sc_application_gitrepo_tag}"
+
+          - name: "utils_application_gitrepo_tag"
+            value: "${ARGOCD_ENV_utils_application_gitrepo_tag}"
+
+          - name: "sc_kubernetes_provider_name"
+            value: "${ARGOCD_ENV_utils_capi_capi_crossplane_k8s_providerconfig_name}"
+
+          - name: "sc_helm_provider_name"
+            value: "${ARGOCD_ENV_utils_capi_capi_crossplane_helm_providerconfig_name}"
+
           - name: "utils_capi_capi_rook_ceph_namespace"
             value: "${ARGOCD_ENV_utils_capi_capi_rook_ceph_namespace}"
 
-          - name: "utils_storage_namespace"
-            value: "${ARGOCD_ENV_utils_storage_namespace}"
+          # rook
+          - name: "utils_capi_capi_rook_ceph_namespace"
+            value: "${ARGOCD_ENV_utils_capi_capi_rook_ceph_namespace}"
+
+          - name: "utils_capi_capi_rook_ceph_sync_wave"
+            value: "${ARGOCD_ENV_utils_capi_capi_rook_ceph_sync_wave}"
+
+          - name: "utils_capi_capi_rook_ceph_post_config_sync_wave"
+            value: "${ARGOCD_ENV_utils_capi_capi_rook_ceph_post_config_sync_wave}"
+
+          - name: "utils_capi_capi_rook_ceph_app_name"
+            value: "${ARGOCD_ENV_utils_capi_capi_rook_ceph_app_name}"
+
+          - name: "utils_capi_capi_rook_ceph_post_config_app_name"
+            value: "${ARGOCD_ENV_utils_capi_capi_rook_ceph_post_config_app_name}"
 
           - name: "utils_capi_capi_rook_ceph_image_version"
             value: "${ARGOCD_ENV_utils_capi_capi_rook_ceph_image_version}"
 
+          - name: "cluster_name"
+            value: "${ARGOCD_ENV_cluster_name}"
+
           - name: "utils_capi_capi_rook_ceph_helm_version"
             value: "${ARGOCD_ENV_utils_capi_capi_rook_ceph_helm_version}"
 
-          - name: "rook_ceph_pool_replication_size"
+          - name: "utils_capi_capi_rook_ceph_rbd_pool_replication_size"
             value: "${ARGOCD_ENV_utils_capi_capi_rook_ceph_rbd_pool_replication_size}"
 
           - name: "utils_capi_capi_rook_ceph_rgw_external_ip"
             value: "${ARGOCD_ENV_utils_capi_capi_rook_ceph_rgw_external_ip}"
 
           # metallb
+          - name: "sc_metallb_app_name"
+            value: "${ARGOCD_ENV_sc_metallb_app_name}"
+
+          - name: "sc_metallb_namespace"
+            value: "${ARGOCD_ENV_sc_metallb_namespace}"
+
+          - name: "sc_metallb_sync_wave"
+            value: "${ARGOCD_ENV_sc_metallb_sync_wave}"
+
           - name: "sc_metallb_version"
             value: "${ARGOCD_ENV_sc_metallb_version}"
 
@@ -51,9 +89,22 @@ spec:
 
           - name: "sc_metallb_namespace"
             value: "${ARGOCD_ENV_sc_metallb_namespace}"
-          # base-monitoring
+
+          # monitoring
+          - name: "monitoring_pre_app_name"
+            value: "${ARGOCD_ENV_monitoring_pre_app_name}"
+
+          - name: "monitoring_app_namespace"
+            value: "${ARGOCD_ENV_monitoring_app_namespace}"
+
           - name: "monitoring_pre_namespace"
             value: "${ARGOCD_ENV_monitoring_pre_namespace}"
+
+          - name: "monitoring_pre_sync_wave"
+            value: "${ARGOCD_ENV_monitoring_pre_sync_wave}"
+
+          - name: "monitoring_application_gitrepo_tag"
+            value: "${ARGOCD_ENV_monitoring_application_gitrepo_tag}"
 
           - name: "utils_base_monitoring_grafana_operator_version"
             value: "${ARGOCD_ENV_utils_base_monitoring_grafana_operator_version}"
@@ -63,6 +114,7 @@ spec:
 
           - name: "utils_base_monitoring_grafana_crd_version_tag"
             value: "${ARGOCD_ENV_utils_base_monitoring_grafana_crd_version_tag}"
+
 
 
 
