--- a/gitops/applications/overlays/cloud_provider/private-cloud/storage-provider/capi-post-config/sc-bootstrap.yaml
+++ b/gitops/applications/overlays/cloud_provider/private-cloud/storage-provider/capi-post-config/sc-bootstrap.yaml
@@ -126,7 +126,19 @@ spec:
           - name: utils_percona_app_name
             value: "${ARGOCD_ENV_utils_percona_app_name}"
 
+          # cert-manager
 
+          - name: cert_manager_credentials_secret
+            value: "${ARGOCD_ENV_utils_cert_manager_credentials_secret}"
+
+          - name: utils_cert_manager_helm_version
+            value: "${ARGOCD_ENV_utils_cert_manager_helm_version}"
+
+          - name: cert_manager_namespace
+            value: "${ARGOCD_ENV_utils_cert_manager_namespace}"
+
+          - name: utils_cert_manager_app_name
+            value: "${ARGOCD_ENV_utils_cert_manager_app_name}"
 
   providerConfigsRef:
     scK8sProviderName: sc-kubernetes-provider
