--- a/gitops/applications/overlays/cloud_provider/private-cloud/storage-provider/capi-post-config/sc-bootstrap.yaml
+++ b/gitops/applications/overlays/cloud_provider/private-cloud/storage-provider/capi-post-config/sc-bootstrap.yaml
@@ -36,10 +36,10 @@ spec:
             value: "${ARGOCD_ENV_utils_capi_capi_rook_ceph_namespace}"
 
           - name: "utils_capi_capi_rook_ceph_sync_wave"
-            value: "${ARGOCD_ENV_utils_capi_capi_rook_ceph_sync_wave}"
+            value: "\"${ARGOCD_ENV_utils_capi_capi_rook_ceph_sync_wave}\""
 
           - name: "utils_capi_capi_rook_ceph_post_config_sync_wave"
-            value: "${ARGOCD_ENV_utils_capi_capi_rook_ceph_post_config_sync_wave}"
+            value: "\"${ARGOCD_ENV_utils_capi_capi_rook_ceph_post_config_sync_wave}\""
 
           - name: "utils_capi_capi_rook_ceph_app_name"
             value: "${ARGOCD_ENV_utils_capi_capi_rook_ceph_app_name}"
@@ -70,7 +70,7 @@ spec:
             value: "${ARGOCD_ENV_sc_metallb_namespace}"
 
           - name: "sc_metallb_sync_wave"
-            value: "${ARGOCD_ENV_sc_metallb_sync_wave}"
+            value: "\"${ARGOCD_ENV_sc_metallb_sync_wave}\""
 
           - name: "sc_metallb_version"
             value: "${ARGOCD_ENV_sc_metallb_version}"
@@ -86,7 +86,7 @@ spec:
 
           # monitoring
           - name: utils_sync_wave
-            value: "${ARGOCD_ENV_utils_sync_wave}"
+            value: "\"${ARGOCD_ENV_utils_sync_wave}\""
 
           - name: utils_base_monitoring_app_name
             value: "${ARGOCD_ENV_utils_base_monitoring_app_name}"
@@ -101,7 +101,7 @@ spec:
             value: "${ARGOCD_ENV_monitoring_pre_namespace}"
 
           - name: "monitoring_pre_sync_wave"
-            value: "${ARGOCD_ENV_monitoring_pre_sync_wave}"
+            value: "\"${ARGOCD_ENV_monitoring_pre_sync_wave}\""
 
           - name: "monitoring_application_gitrepo_tag"
             value: "${ARGOCD_ENV_monitoring_application_gitrepo_tag}"
